src/kudu/tserver/tablet_service.h
@@ -62,6 +62,7 @@ class RunLeaderElectionRequestPB;
 class RunLeaderElectionResponsePB;
 class StartTabletCopyRequestPB;
 class StartTabletCopyResponsePB;
+class TimeManager;
 class UnsafeChangeConfigRequestPB;
 class UnsafeChangeConfigResponsePB;
 class VoteRequestPB;
@@ -148,7 +149,8 @@ class TabletServiceImpl : public TabletServerServiceIf {
   Status HandleScanAtSnapshot(const NewScanRequestPB& scan_pb,
                               const rpc::RpcContext* rpc_context,
                               const Schema& projection,
-                              tablet::TabletReplica* tablet_replica,
+                              tablet::Tablet* tablet,
+                              consensus::TimeManager* time_manager,
                               gscoped_ptr<RowwiseIterator>* iter,
                               Timestamp* snap_timestamp);
 
